<resources>
    <string name="app_name">UTS</string>
    <string name="meow_1">Meow 1</string>
    <string name="meow_2">Meow 2</string>
    <string name="meow_3">Meow 3</string>
    <string name="meow_4">Meow 4</string>
    <string name="meow_5">Meow 5</string>
    <string name="meow_6">Meow 6</string>
    <string name="meow_7">Meow 7</string>
    <string name="meow_8">Meow 8</string>

</resources>