<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="814dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/meow1"
                        style="@style/Widget.AppCompat.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="150sp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/meow_1"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/meow1_round"
                        tools:ignore="ImageContrastCheck" />


                    <ImageButton
                        android:id="@+id/meow2"
                        android:layout_width="wrap_content"
                        android:layout_height="150sp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/meow_2"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/meow2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Meow 1"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Meow 2"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/meow3"
                        android:layout_width="wrap_content"
                        android:layout_height="150sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/meow_3"
                        android:onClick="onClick"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/meow3"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/meow4"
                        android:layout_width="wrap_content"
                        android:layout_height="150sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/meow_4"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/meow4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Meow 3"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Meow 4"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/meow5"
                        android:layout_width="wrap_content"
                        android:layout_height="150sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/meow_5"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/meow5" />

                    <ImageButton
                        android:id="@+id/meow6"
                        android:layout_width="wrap_content"
                        android:layout_height="150sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/meow_6"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/meow6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Meow 5"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Meow 6"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/meow7"
                        android:layout_width="wrap_content"
                        android:layout_height="150sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/meow_7"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/meow7" />

                    <ImageButton
                        android:id="@+id/meow8"
                        android:layout_width="wrap_content"
                        android:layout_height="150sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/meow_8"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/meow8" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:paddingBottom="50sp">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Meow 7"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Meow 8"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>